# GRTTrainingModule

./: CMakeLists.txt
GestureRecognition/: CMakeLists.txt  GestureRecognition.py
